--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js",
-    "start": "node web/index.js"
+    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js"
   },
   "dependencies": {
     "archiver": "^1.1.0",
