Remove extra dependencies

--- a/package.json
+++ b/package.json
@@ -11,22 +11,16 @@
   },
   "main": "release/plekan.js",
   "dependencies": {
-    "archiver": "^1.1.0",
-    "archiver-json": "^0.1.1",
-    "body-parser": "^1.15.2",
-    "express": "^4.13.3",
-    "md5": "^2.2.1",
     "selo": "^1.0.1",
     "sortablejs": "^1.4.2",
-    "uuid": "^2.0.3",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "uuid": "^3.0.1",
+    "vue": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.1",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^7.0.0",
     "babel-plugin-syntax-jsx": "^6.13.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
@@ -34,25 +28,25 @@
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.28.3",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.10.1",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "sass-loader": "^4.0.2",
+    "node-sass": "^4.5.3",
+    "opn": "^5.0.0",
+    "ora": "^1.2.0",
+    "sass-loader": "^6.0.5",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.2",
+    "vue-loader": "^12.1.1",
+    "vue-style-loader": "^3.0.1",
+    "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^4.1.0"
   }
 }
