--- a/package.json
+++ b/package.json
@@ -1,52 +1,71 @@
 {
   "name": "plekan",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Abdullah Marax <abdullah.mara@bodevoffice.com>",
+  "author": "Abdullah Mara <zull.mara00@gmail.com>",
+  "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
+    "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js",
-    "start": "node web/index.js"
+    "lint": "eslint --ext .js,.vue src"
   },
-  "main": "release/plekan.js",
   "dependencies": {
-    "selo": "^1.0.1",
-    "sortablejs": "^1.4.2",
+    "selo": "^1.1.0",
+    "sortablejs": "^1.5.1",
     "uuid": "^3.0.1",
-    "vue": "^2.0.1"
+    "vue": "^2.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.0.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-plugin-transform-vue-jsx": "^3.1.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.28.3",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.3",
-    "opn": "^5.0.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
-    "sass-loader": "^6.0.5",
-    "shelljs": "^0.7.4",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^12.1.1",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
-  }
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
